Mise à jour de test

--- a/Index.html
+++ b/Index.html
@@ -8,17 +8,15 @@
 </head>
 <body>
     <header>
-        <img 
-            srcset="Bannière Ultra.jpg 2560w, Bannière Moyenne.jpg 1280w, Bannière Petit.jpg 640w"
-            src="Img/Bannière Ultra.jpg" alt="Bannière du restaurant Le Palais Français" style="width: 100%;">
+        <img src="img/banniere_ultra.jpg" style="width: 100%;"alt="Bannière du restaurant Le Palais Français">
     </header>
-    <h1><a href="Index.html"><img src="Img/Logo.jpg.jpg" alt="Logo HTML5" width="" height=""></a>Le Palais Français</h1>
+    <h1><a href="Index.html"><img src="img/logo.jpg.jpg" alt="Logo HTML5" width="" height=""></a>Le Palais Français</h1>
     <nav>
         <a href="Index.html" title="Accueil">Accueil</a>
         <a href="Menu/Menu.html" title="Menu">Menu</a>
         <a href="Contact/Contact.html" title="Contact">Contact</a>
     </nav>
-    <img src="Img/Le Palais Français.jpg" alt="Photo du restaurant le Palais Français">
+    <img src="img/le_palais_francais_grand.jpg" alt="Photo du restaurant le Palais Français">
     <p>Le palais Français est un restaurant spécialisé dans la cuisine française de terroir. <br>Une cuisine authentique et respectueuse des traditions.</p>
     <table>
         <thead>
