--- a/menu/menu.html
+++ b/menu/menu.html
@@ -24,15 +24,15 @@
         </thead>
         <tbody>
             <tr>
-                <td><li><a href="Entree1.html">Rillettes de porc</a></li></td>
+                <td><li><a href="entree1.html">Rillettes de porc</a></li></td>
                 <td>6€</td>
             </tr>
             <tr>
-                <td><li><a href="Entree2.html">Terrine de saumon</a></li></td>
+                <td><li><a href="entree2.html">Terrine de saumon</a></li></td>
                 <td>8€</td>
             </tr>
             <tr>
-                <td><li><a href="Entree3.html">Foie gras</a></li></td>
+                <td><li><a href="entree3.html">Foie gras</a></li></td>
                 <td>8€</td>
             </tr>
         </tbody>
@@ -55,15 +55,15 @@
         </thead>
         <tbody>
             <tr>
-                <td><li><a href="Plat1.html">Cassoulet de Castelnaudary</a></li></td>
+                <td><li><a href="plat1.html">Cassoulet de Castelnaudary</a></li></td>
                 <td>21€</td>
             </tr>
             <tr>
-                <td><li><a href="Plat2.html">Daube de boeuf</a></li></td>
+                <td><li><a href="plat2.html">Daube de boeuf</a></li></td>
                 <td>17€</td>
             </tr>
             <tr>
-                <td><li><a href="Plat3.html">Le Burger de Kiko-tan</a></li></td>
+                <td><li><a href="plat3.html">Le Burger de Kiko-tan</a></li></td>
                 <td>14€</td>
             </tr>
         </tbody>
@@ -86,15 +86,15 @@
         </thead>
         <tbody>
             <tr>
-                <td><li><a href="Dessert1.html">Pain perdu</a></li></td>
+                <td><li><a href="dessert1.html">Pain perdu</a></li></td>
                 <td>6€</td>
             </tr>
             <tr>
-                <td><li><a href="Dessert2.html">Crêpe Bretonne</a></li></td>
+                <td><li><a href="dessert2.html">Crêpe Bretonne</a></li></td>
                 <td>4€</td>
             </tr>
             <tr>
-                <td><li><a href="Dessert3.html">Crême brûlé</a></li></td>
+                <td><li><a href="dessert3.html">Crême brûlé</a></li></td>
                 <td>6€</td>
             </tr>
         </tbody>
@@ -106,9 +106,9 @@
 
     </table>
     <nav>
-        <a href="../Index.html" title="Accueil">Accueil</a>
-        <a href="Menu.html" title="Menu">Menu</a>
-        <a href="../Contact/Contact.html" title="Contact">Contact</a>
+        <a href="../index.html" title="Accueil">Accueil</a>
+        <a href="menu.html" title="Menu">Menu</a>
+        <a href="../contact/contact.html" title="Contact">Contact</a>
     </nav>
 </body>
 </html>
