--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta name="description" content="Bienvenue au Palais au français ! Nous sommes un restaurant de cuisine française, spécialisé dans la cuisine du terroir. Notre cuisine mêle tradition, modernité et élégance.">
     <meta name="keywords" content="Cuisine française, terroir, moderne, raffiné, gourmand">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <img src="img/banniere_ultra.jpg" style="width: 100%;"alt="Bannière du restaurant Le Palais Français">
+        <img class="banniere" 
+        srcset="img/banniere_ultra.jpg 2560w, img/banniere_moyenne.jpg 1280w, img/banniere_petit.jpg 640w"
+        src="img/banniere_ultra.jpg" alt="Bannière du restaurant Le Palais Français">
     </header>
     <h1><a href="index.html"><img src="img/logo.jpg.jpg" alt="Logo HTML5" width="" height=""></a>Le Palais Français</h1>
     <nav>
@@ -16,8 +19,8 @@
         <a href="menu/menu.html" title="Menu">Menu</a>
         <a href="contact/contact.html" title="Contact">Contact</a>
     </nav>
-    <img src="img/le_palais_francais_grand.jpg" alt="Photo du restaurant le Palais Français">
-    <p>Le palais Français est un restaurant spécialisé dans la cuisine française de terroir. <br>Une cuisine authentique et respectueuse des traditions.</p>
+        <img src="img/le_palais_francais_grand.jpg" alt="Photo du restaurant le Palais Français">
+        <p>Le palais Français est un restaurant spécialisé dans la cuisine française de terroir. <br>Une cuisine authentique et respectueuse des traditions.</p>
     <table>
         <thead>
             <tr>
