--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="menu/menu.html" title="Menu">Menu</a>
         <a href="contact/contact.html" title="Contact">Contact</a>
     </nav>
-        <img 
+        <img class="img"
         srcset="img/le_palais_francais_grand.jpg w1100, img/le_palais_francais_moyen.jpg w550, img/le_palais_francais_petit.jpg w275"
         src="img/le_palais_francais_grand.jpg" alt="Photo du restaurant le Palais Français">
         <p>Le palais Français est un restaurant spécialisé dans la cuisine française de terroir. <br>Une cuisine authentique et respectueuse des traditions.</p>
