--- a/menu/dessert2.html
+++ b/menu/dessert2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Crêpe Bretonne</title>
+    <link rel="stylesheet" href="../index.html">
 </head>
 <body>
     <p>
@@ -10,7 +11,8 @@
     </p>
     
     <h1>Crêpe Bretonne</h1>
-    <img src="../img/crepe_bretonne_grand.jpg" alt="Image de la crêpe Bretonne">
+    <img class="img"
+    src="../img/crepe_bretonne_grand.jpg" alt="Image de la crêpe Bretonne">
 
     <h2>Ingrédients</h2>
     <ul>
