--- a/menu/entree1.html
+++ b/menu/entree1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Rillettes de porc</title>
+    <link rel="stylesheet" href="../index.html">
 </head>
 <body>
     <p>
@@ -10,7 +11,8 @@
     </p>
     
     <h1 id="Kiko">Rillettes de porc</h1>
-    <img src="../img/rillettes_de_porc_grand.jpg" alt="Image des rillettes porc">
+    <img class="img"
+    src="../img/rillettes_de_porc_grand.jpg" alt="Image des rillettes porc">
 
     <h2>Ingrédients</h2>
     <ul>
