--- a/menu/entree3.html
+++ b/menu/entree3.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Foie gras</title>
+    <link rel="stylesheet" href="../index.html">
 </head>
 <body>
     <p>
@@ -10,7 +11,8 @@
     </p>
     
     <h1>Foie gras</h1>
-    <img src="../img/foie_gras_grand.jpg" alt="Image du Foie gras">
+    <img class="img"
+    src="../img/foie_gras_grand.jpg" alt="Image du Foie gras">
 
     <h2>Ingrédients</h2>
     <ul>
