--- a/menu/menu.html
+++ b/menu/menu.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Menu du restaurant Le Palais Français</title>
-    <style></style>
-    
+    <link rel="stylesheet" href="../index.html">
 </head>
 <body>
     <p>
