--- a/menu/plat1.html
+++ b/menu/plat1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Cassoulet de Castelnaudary</title>
+    <link rel="stylesheet" href="../index.html">
 </head>
 <body>
     <p>
@@ -10,7 +11,8 @@
     </p>
     
     <h1>Cassoulet de Castelnaudary</h1>
-    <img src="../img/cassoulet_grand.jpg" alt="Image du Cassoulet">
+    <img class="img"
+    src="../img/cassoulet_grand.jpg" alt="Image du Cassoulet">
 
     <h2>Ingrédients</h2>
     <ul>
