--- a/menu/plat2.html
+++ b/menu/plat2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Daube de boeuf</title>
+    <link rel="stylesheet" href="../index.html">
 </head>
 <body>
     <p>
@@ -10,7 +11,8 @@
     </p>
     
     <h1>Daube de boeuf</h1>
-    <img src="../img/daube_grand.jpg" alt="Image de la daube de boeuf">
+    <img class="img"
+    src="../img/daube_grand.jpg" alt="Image de la daube de boeuf">
 
     <h2>Ingrédients</h2>
     <ul>
