--- a/menu/plat3.html
+++ b/menu/plat3.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Le poulet de Kiko-tan</title>
+    <link rel="stylesheet" href="../index.html">
 </head>
 <body>
     <p>
@@ -10,7 +11,8 @@
     </p>
     
     <h1>Le Burger de Kiko-tan</h1>
-    <img src="../img/burguer_de_kiko-tan_grand.jpg" alt="Image du Burger">
+    <img class="img"
+    src="../img/burguer_de_kiko-tan_grand.jpg" alt="Image du Burger">
 
     <h2>Ingrédients</h2>
     <ul>
