--- a/menu/dessert1.html
+++ b/menu/dessert1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Pain perdu</title>
+    <link rel="stylesheet" href="../index.html">
 </head>
 <body>
     <p>
@@ -10,7 +11,8 @@
     </p>
     
     <h1>Pain perdu</h1>
-    <img src="../img/pain_perdu_grand.jpg" alt="Image du Pain perdu">
+    <img class="img"
+    src="../img/pain_perdu_grand.jpg" alt="Image du Pain perdu">
 
     <h2>Ingrédients</h2>
     <ul>
