--- a/menu/dessert3.html
+++ b/menu/dessert3.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Crême Brûlé</title>
+    <link rel="stylesheet" href="../index.html">
 </head>
 <body>
     <p>
@@ -10,7 +11,8 @@
     </p>
     
     <h1>Crème brulée</h1>
-    <img src="../img/creme brulee_grand.jpg" alt="Image de la crème Brulée">
+    <img class="img"
+    src="../img/creme brulee_grand.jpg" alt="Image de la crème Brulée">
 
     <h2>Ingrédients</h2>
     <ul>
