--- a/menu/entree2.html
+++ b/menu/entree2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Terrine de saumon</title>
+    <link rel="stylesheet" href="../index.html">
 </head>
 <body>
     <p>
@@ -10,7 +11,8 @@
     </p>
     
     <h1>Terrine de saumon</h1>
-    <img src="../img/terrine_de_saumon_grand.jpg" alt="Image de la Terrine de saumon">
+    <img class="img"
+    src="../img/terrine_de_saumon_grand.jpg" alt="Image de la Terrine de saumon">
 
     <h2>Ingrédients</h2>
     <ul>
