--- a/menu/entree2.html
+++ b/menu/entree2.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Terrine de saumon</title>
-    <link rel="stylesheet" href="../index.html">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+    <header>
+        <img class="banniere" 
+        srcset="../img/banniere_ultra.jpg 2560w, ../img/banniere_moyenne.jpg 1280w, ../img/banniere_petit.jpg 640w"
+        src="../img/banniere_ultra.jpg" alt="Bannière du restaurant Le Palais Français">
+    </header>
     <p>
         <a href="menu.html"><img src="../img/logo.jpg.jpg" alt="Logo HTML5">Revenir au Menu</a>
     </p>
