--- a/contact/contact.html
+++ b/contact/contact.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+    <header>
+        <img class="banniere" 
+        srcset="../img/banniere_ultra.jpg 2560w, ../img/banniere_moyenne.jpg 1280w, ../img/banniere_petit.jpg 640w"
+        src="../img/banniere_ultra.jpg" alt="Bannière du restaurant Le Palais Français">
+    </header>
     <h2>Notre adresse</h2>
     <p>
         〒061-1406 北海道恵庭市和光町２丁目６−１２
