--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <a href="contact/contact.html" title="Contact">Contact</a>
     </nav>
         <img class="img"
-        srcset="img/le_palais_francais_grand.jpg w1100, img/le_palais_francais_moyen.jpg w550, img/le_palais_francais_petit.jpg w275"
-        src="img/le_palais_francais_grand.jpg" alt="Photo du restaurant le Palais Français">
+        srcset="img/restaurant_ultra.jpeg 2560w, img/restaurant_moyen.jpg 1280w, img/restaurant_petit.jpg 640w"
+        src="img/restaurant_ultra.jpeg" alt="Photo du restaurant le Palais Français">
         <p>Le palais Français est un restaurant spécialisé dans la cuisine française de terroir. <br>Une cuisine authentique et respectueuse des traditions.</p>
     <table>
         <thead>
