--- a/menu/dessert1.html
+++ b/menu/dessert1.html
@@ -17,6 +17,7 @@
     
     <h1>Pain perdu</h1>
     <img class="img"
+    srcset="../img/pain_perdu_grand.jpg 920w, ../img/pain_perdu_moyen.jpg 460w, ../img/pain_perdu_petit.jpg 230w"
     src="../img/pain_perdu_grand.jpg" alt="Image du Pain perdu">
 
     <h2>Ingrédients</h2>
