--- a/menu/dessert2.html
+++ b/menu/dessert2.html
@@ -17,6 +17,7 @@
     
     <h1>Crêpe Bretonne</h1>
     <img class="img"
+    srcset="../img/crepe_bretonne_grand.jpg 920w, ../img/crepe_bretonne_moyen.jpg 460w, ../img/crepe_bretonne_petit.jpg 230w"
     src="../img/crepe_bretonne_grand.jpg" alt="Image de la crêpe Bretonne">
 
     <h2>Ingrédients</h2>
