--- a/menu/dessert3.html
+++ b/menu/dessert3.html
@@ -17,6 +17,7 @@
     
     <h1>Crème brulée</h1>
     <img class="img"
+    srcset="../img/creme brulee_grand.jpg 920w, ../img/creme brulee_moyen.jpg 460w, ../img/creme brulee_petit.jpg 230w"
     src="../img/creme brulee_grand.jpg" alt="Image de la crème Brulée">
 
     <h2>Ingrédients</h2>
