--- a/menu/entree1.html
+++ b/menu/entree1.html
@@ -17,6 +17,7 @@
     
     <h1 id="Kiko">Rillettes de porc</h1>
     <img class="img"
+    srcset="../img/rillettes_de_porc_grand.jpg 920w, ../img/rillettes_de_porc_moyen.jpg 460w, ../img/rillettes_de_porc_petit.jpg 230w"
     src="../img/rillettes_de_porc_grand.jpg" alt="Image des rillettes porc">
 
     <h2>Ingrédients</h2>
