--- a/menu/entree2.html
+++ b/menu/entree2.html
@@ -17,6 +17,7 @@
     
     <h1>Terrine de saumon</h1>
     <img class="img"
+    srcset="../img/terrine_de_saumon_grand.jpg 920w, ../img/terrine_de_saumon_moyen.jpg 460w, ../img/terrine_de_saumon_petit.jpg 230w"
     src="../img/terrine_de_saumon_grand.jpg" alt="Image de la Terrine de saumon">
 
     <h2>Ingrédients</h2>
