--- a/menu/entree3.html
+++ b/menu/entree3.html
@@ -17,6 +17,7 @@
     
     <h1>Foie gras</h1>
     <img class="img"
+    srcset="../img/foie_gras_grand.jpg 920w, ../img/foie_gras_moyen.jpg 460w, ../img/foie_gras_petit.jpg 230w"
     src="../img/foie_gras_grand.jpg" alt="Image du Foie gras">
 
     <h2>Ingrédients</h2>
