--- a/menu/plat1.html
+++ b/menu/plat1.html
@@ -17,6 +17,7 @@
     
     <h1>Cassoulet de Castelnaudary</h1>
     <img class="img"
+    srcset="../img/cassoulet_grand.jpg 920w, ../img/cassoulet_moyen.jpg 460w, ../img/cassoulet_petit.jpg 230w"
     src="../img/cassoulet_grand.jpg" alt="Image du Cassoulet">
 
     <h2>Ingrédients</h2>
