--- a/menu/plat2.html
+++ b/menu/plat2.html
@@ -17,6 +17,7 @@
     
     <h1>Daube de boeuf</h1>
     <img class="img"
+    srcset="../img/daube_grand.jpg 920w, ../img/daube_moyen.jpg 460w, ../img/daube_petit.jpg 230w"
     src="../img/daube_grand.jpg" alt="Image de la daube de boeuf">
 
     <h2>Ingrédients</h2>
