--- a/menu/plat3.html
+++ b/menu/plat3.html
@@ -17,6 +17,7 @@
     
     <h1>Le Burger de Kiko-tan</h1>
     <img class="img"
+    srcset="../img/burguer_de_kiko-tan_grand.jpg 920w, ../img/burguer_de_kiko-tan_moyen.jpg 460w, ../img/burguer_de_kiko-tan_petit.jpg 230w"
     src="../img/burguer_de_kiko-tan_grand.jpg" alt="Image du Burger">
 
     <h2>Ingrédients</h2>
